--- a/iGMS/Views/DetailWareHouse/Index.cshtml
+++ b/iGMS/Views/DetailWareHouse/Index.cshtml
@@ -23,7 +23,7 @@
             <label for="example-password-input" class="col-2 col-form-label">Số Phiếu Nhập <span style="color:red"> (*) </span></label>
             <div class="col-10">
                 <div class="input-group ">
-                    <input class="form-control selectpicker" data-size="7" data-live-search="true" name="idReceipt" />
+                    <input class="form-control selectpicker" id="idReceipt" name="idReceipt" />
 
                 </div>
             </div>
@@ -57,7 +57,8 @@
             <div class="col-10">
                 <span name="warehouse"></span>
             </div>
-        </div>
+        </div>   
+        
         <div class="form-group  row">
             <label for="example-search-input" class="col-2 col-form-label">Hàng Hóa<span style="color:red"> (*) </span></label>
             <div class="col-10" style="height: 500px;overflow-y: scroll;">
