--- a/iGMS/Views/Receipt/Index.cshtml
+++ b/iGMS/Views/Receipt/Index.cshtml
@@ -85,16 +85,15 @@
                 <span name="warehouse"></span>
             </div>
         </div>
-        <div class="form-group row">
-            <label for="example-search-input" class="col-2 col-form-label">Phuong thuc quet</label>
-            <div class="col-5">
-                <button id="btnRFID" onclick="RFIDEnumrate()" class="btn btn-bg-primary">RFID</button>
-            </div>
-            <div class="col-5">
-                <button class="btn btn-bg-danger" onclick="BarcodeEnumrate()">Barcode</button>
-            </div>
-        </div>
        
+        <div class="form-group row"  id="HandHeld">
+            <label for="example-search-input" class="col-2 col-form-label">Phương thức quét<span style="color:red"> (*Handheld)</span> </label>
+            <div class="col-2">
+                <input type="checkbox" id="ScanMethod" checked data-toggle="toggle" data-on="Barcode" data-off="RFID" data-onstyle="success" data-offstyle="primary">
+            </div>
+           
+        </div>
+
         <div class="form-group  row tablenhan">
             <label for="example-search-input" class="col-2 col-form-label">Hàng Hóa<span style="color:red"> (*) </span></label>
             <div class="col-10" style="height: 500px;overflow-y: scroll;">
@@ -251,6 +250,15 @@
 </div>
 @section scripts{
     <script>
+        $(document).ready(function () {
+            BarcodeEnumrate()
+        if (/Android/i.test(navigator.userAgent)) {
+           $("#HandHeld").show()
+        } else {
+            $("#HandHeld").hide()
+        }
+        });
+        
         var d = new Date()
         $('#id').val(d.Day)
         $(document).ready(function () {
@@ -301,31 +309,54 @@
     <script src="~/Scripts/Receipt.js"></script>
     <script src="~/Scripts/ebapi-modules.js"></script>
     <script src="~/Scripts/elements.js"></script>
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
     <script type="text/javascript">
+
+      //Switch Toggle
+        $("#ScanMethod").change(function () {
+            if ($(this).is(":checked")) {
+                console.log('bar')
+                /*BarcodeEnumrate()*/
+                getDetailGoodOrder()
+
+            } else {
+                console.log('rfid')
+                //RFIDEnumrate()
+                getDetailGoodOrder()
+
+            }
+
+        })
+
         //RFID
-        var lstEpc = [];
+        var lstEpcSended = [];
         rfid.statusEvent = "statusEvent(%json)";
         rfid.tagEvent = "TagHandler(%json)";
         function TagHandler(tagarray) {
-           
+            var lstEpc = []
+            lstEpc.length = 0
             for (i = 0; i < tagarray.TagData.length; i++) {
                 var epc = tagarray.TagData[i].tagID
-                lstEpc.push(epc)
+                if (!lstEpcSended.includes(epc)) {
+                    lstEpc.push(epc)
+                    lstEpcSended.push(epc)
+                }
             }
-            
+
             rfidTagQty(lstEpc)
         }
         function RFIDEnumrate() {
             EB.Barcode.disable()
-            alert('Bat dau quet')
+
             rfid.transport = 'serial'
             rfid.enumerate();
             rfid.readerID = 'RFID1';
             rfid.connect();
-
+            alert('Bắt đầu quét RFID')
         }
 
-       
+
         ///Kiem tra so luong bang rfid
         function rfidTagQty(epc) {
             $.ajax({
@@ -337,7 +368,7 @@
                 success: function (result) {
                     if (result.code = 200) {
                         $.each(result.barcode, function (i, d) {
-                            
+
                             CompareReceipt(d)
 
                         })
@@ -350,19 +381,16 @@
 
         //Barcode
         // MC3300
-        $(document).ready(function () {
-            BarcodeEnumrate()
-
-        });
+       
         function BarcodeEnumrate() {
-            rfid.stop()
+            rfid.disconnect()
             EB.Barcode.enable({
                 allDecoders: true
             }, MouseCheck);
         }
 
         function MouseCheck(code) {
-
+            alert('Bắt đầu quét Barcode')
             var txt = getText(document.activeElement);
 
 
@@ -392,5 +420,4 @@
             $('#purchaseorder').val(code)
         }
     </script>
-    
-   
+}
