--- a/iGMS/Views/DetailWareHouse/Index2.cshtml
+++ b/iGMS/Views/DetailWareHouse/Index2.cshtml
@@ -40,6 +40,13 @@
                 <span name="customer"></span>
             </div>
         </div>
+        <div class="form-group row" id="HandHeld">
+            <label for="example-search-input" class="col-2 col-form-label">Phương thức quét<span style="color:red"> (*Handheld)</span> </label>
+            <div class="col-2">
+                <input type="checkbox" id="ScanMethod" checked data-toggle="toggle" data-on="Barcode" data-off="RFID" data-onstyle="success" data-offstyle="primary">
+            </div>
+
+        </div>
         <div class="form-group  row">
             <label for="example-search-input" class="col-2 col-form-label">Hàng Hóa<span style="color:red;"> (*) </span></label>
             <div class="col-10" style="height: 500px;overflow-y: scroll;">
@@ -73,5 +80,122 @@
 </div>
 @section scripts{
     <script src="~/Scripts/XuatKho.js"></script>
+    <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            BarcodeEnumrate()
+            //if (/Android/i.test(navigator.userAgent)) {
+            //    $("#HandHeld").show()
+            //} else {
+            //    $("#HandHeld").hide()
+            //}
+        });
 
+        $("#ScanMethod").change(function () {
+            var id = $('#idsaleorder').val().trim().substring(5)
+            if ($(this).is(":checked")) {
+                console.log('bar')
+                /*BarcodeEnumrate()*/
+                Show(id)
+            } else {
+                console.log('rfid')
+                //RFIDEnumrate()
+                Show(id)
+
+            }
+
+        })
+
+        //RFID
+        var lstEpcSended = [];
+        rfid.statusEvent = "statusEvent(%json)";
+        rfid.tagEvent = "TagHandler(%json)";
+        function TagHandler(tagarray) {
+            var lstEpc = []
+            lstEpc.length = 0
+            for (i = 0; i < tagarray.TagData.length; i++) {
+                var epc = tagarray.TagData[i].tagID
+                if (!lstEpcSended.includes(epc)) {
+                    lstEpc.push(epc)
+                    lstEpcSended.push(epc)
+                }
+            }
+
+            rfidTagQty(lstEpc)
+        }
+        function RFIDEnumrate() {
+            EB.Barcode.disable()
+
+            rfid.transport = 'serial'
+            rfid.enumerate();
+            rfid.readerID = 'RFID1';
+            rfid.connect();
+            alert('Bắt đầu quét RFID')
+        }
+
+
+        ///Kiem tra so luong bang rfid
+        function rfidTagQty(epc) {
+            $.ajax({
+                url: '/RFID/getBarcodeByEPC',
+                type: 'POST',
+                data: {
+                    tags: epc
+                },
+                success: function (result) {
+                    if (result.code = 200) {
+                        $.each(result.barcode, function (i, d) {
+
+                            CompareReceipt(d)
+
+                        })
+                    } else {
+                        alert("error")
+                    }
+                }
+            })
+        }
+
+        //Barcode
+        // MC3300
+
+        function BarcodeEnumrate() {
+            rfid.disconnect()
+            EB.Barcode.enable({
+                allDecoders: true
+            }, MouseCheck);
+        }
+
+        function MouseCheck(code) {
+            alert('Bắt đầu quét Barcode')
+            var txt = getText(document.activeElement);
+
+
+            if (txt == 'purchaseorder') {
+                setPurchaseOrderText(code.data)
+
+            } else {
+
+                fnBarcodeScanned(code.data)
+            }
+
+        }
+
+        function getText(elem) {
+            if ((elem.tagName === "INPUT" && elem.type === "text")) {
+
+                return elem.id
+            }
+            return null;
+        }
+
+        function fnBarcodeScanned(jsonObject) {
+            CompareReceipt(jsonObject);
+        }
+
+        function setPurchaseOrderText(code) {
+            $('#purchaseorder').val(code)
+        }
+    </script>
 }
