--- a/iGMS/Views/Shared/_Layout.cshtml
+++ b/iGMS/Views/Shared/_Layout.cshtml
@@ -793,13 +793,13 @@
                                                     </a>
                                                     <!--end::Item-->
                                                     <!--begin::Item-->
-                                                    <a name="ManageMainCategories" href="/Material/Index" class="navi-item">
+                                                    <a name="ManageMainCategories" href="/Style/Index" class="navi-item">
                                                         <div class="navi-link">
                                                             <div class="navi-icon mr-2">
                                                                 <img src="~/Images/icons-Material.png" />
                                                             </div>
                                                             <div class="navi-text">
-                                                                <div class="font-weight-bold">Chất Liệu</div>
+                                                                <div class="font-weight-bold">Phong Cách</div>
                                                             </div>
                                                         </div>
                                                     </a>
