--- a/iGMS/Views/GroupGoods/Adds.cshtml
+++ b/iGMS/Views/GroupGoods/Adds.cshtml
@@ -29,7 +29,14 @@
                 </div>
             </div>
         </div>
-
+        <div class="form-group row">
+            <label for="example-password-input" class="col-2 col-form-label">Mã Nhóm Hàng <span style="color:red"> (*) </span></label>
+            <div class="col-10">
+                <div class="input-group ">
+                    <input class="form-control" type="text" placeholder="Mã Nhóm Hàng " id="id" />
+                </div>
+            </div>
+        </div>
         <div class="form-group row">
             <label for="example-password-input" class="col-2 col-form-label">Tên Nhóm Hàng <span style="color:red"> (*) </span></label>
             <div class="col-10">
