--- a/iGMS/Views/Shared/_Layout.cshtml
+++ b/iGMS/Views/Shared/_Layout.cshtml
@@ -796,7 +796,7 @@
                                                     <a name="ManageMainCategories" href="/Style/Index" class="navi-item">
                                                         <div class="navi-link">
                                                             <div class="navi-icon mr-2">
-                                                                <img src="~/Images/icons-Material.png" />
+                                                                <img src="~/Images/icons8-style-40.png" />
                                                             </div>
                                                             <div class="navi-text">
                                                                 <div class="font-weight-bold">Phong Cách</div>
@@ -827,124 +827,26 @@
                                                             </div>
                                                         </div>
                                                     </a>
-                                                    <!--end::Item-->
-                                                    <!--begin::Item-->
-                                                    <a href="#" class="navi-item">
+                                                    <a name="ManageMainCategories" href="/Gender/Index" class="navi-item">
                                                         <div class="navi-link">
                                                             <div class="navi-icon mr-2">
-                                                                <i class="flaticon2-pie-chart-3 text-warning"></i>
-                                                            </div>
-                                                            <div class="navinavinavi-text">
-                                                                <div class="font-weight-bold">New file has been uploaded</div>
-                                                                <div class="text-muted">5 hrs ago</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                    <!--end::Item-->
-                                                    <!--begin::Item-->
-                                                    <a href="#" class="navi-item">
-                                                        <div class="navi-link">
-                                                            <div class="navi-icon mr-2">
-                                                                <i class="flaticon-pie-chart-1 text-info"></i>
+                                                                <img src="~/Images/icons8-gender-40.png" />
                                                             </div>
                                                             <div class="navi-text">
-                                                                <div class="font-weight-bold">New user feedback received</div>
-                                                                <div class="text-muted">8 hrs ago</div>
+                                                                <div class="font-weight-bold">Giới Tính</div>
                                                             </div>
                                                         </div>
                                                     </a>
-                                                    <!--end::Item-->
-                                                    <!--begin::Item-->
-                                                    <a href="#" class="navi-item">
+                                                    <a name="ManageMainCategories" href="/Coo/Index" class="navi-item">
                                                         <div class="navi-link">
                                                             <div class="navi-icon mr-2">
-                                                                <i class="flaticon2-settings text-success"></i>
+                                                                <img src="~/Images/icons8-deployment-40.png" />
                                                             </div>
                                                             <div class="navi-text">
-                                                                <div class="font-weight-bold">System reboot has been successfully completed</div>
-                                                                <div class="text-muted">12 hrs ago</div>
+                                                                <div class="font-weight-bold">Nhà Sản Xuất</div>
                                                             </div>
                                                         </div>
                                                     </a>
-                                                    <!--end::Item-->
-                                                    <!--begin::Item-->
-                                                    <a href="#" class="navi-item">
-                                                        <div class="navi-link">
-                                                            <div class="navi-icon mr-2">
-                                                                <i class="flaticon-safe-shield-protection text-primary"></i>
-                                                            </div>
-                                                            <div class="navi-text">
-                                                                <div class="font-weight-bold">New order has been placed</div>
-                                                                <div class="text-muted">15 hrs ago</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                    <!--end::Item-->
-                                                    <!--begin::Item-->
-                                                    <a href="#" class="navi-item">
-                                                        <div class="navi-link">
-                                                            <div class="navi-icon mr-2">
-                                                                <i class="flaticon2-notification text-primary"></i>
-                                                            </div>
-                                                            <div class="navi-text">
-                                                                <div class="font-weight-bold">Company meeting canceled</div>
-                                                                <div class="text-muted">19 hrs ago</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                    <!--end::Item-->
-                                                    <!--begin::Item-->
-                                                    <a href="#" class="navi-item">
-                                                        <div class="navi-link">
-                                                            <div class="navi-icon mr-2">
-                                                                <i class="flaticon2-fax text-success"></i>
-                                                            </div>
-                                                            <div class="navi-text">
-                                                                <div class="font-weight-bold">New report has been received</div>
-                                                                <div class="text-muted">23 hrs ago</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                    <!--end::Item-->
-                                                    <!--begin::Item-->
-                                                    <a href="#" class="navi-item">
-                                                        <div class="navi-link">
-                                                            <div class="navi-icon mr-2">
-                                                                <i class="flaticon-download-1 text-danger"></i>
-                                                            </div>
-                                                            <div class="navi-text">
-                                                                <div class="font-weight-bold">Finance report has been generated</div>
-                                                                <div class="text-muted">25 hrs ago</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                    <!--end::Item-->
-                                                    <!--begin::Item-->
-                                                    <a href="#" class="navi-item">
-                                                        <div class="navi-link">
-                                                            <div class="navi-icon mr-2">
-                                                                <i class="flaticon-security text-warning"></i>
-                                                            </div>
-                                                            <div class="navi-text">
-                                                                <div class="font-weight-bold">New customer comment recieved</div>
-                                                                <div class="text-muted">2 days ago</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                    <!--end::Item-->
-                                                    <!--begin::Item-->
-                                                    <a href="#" class="navi-item">
-                                                        <div class="navi-link">
-                                                            <div class="navi-icon mr-2">
-                                                                <i class="flaticon2-analytics-1 text-success"></i>
-                                                            </div>
-                                                            <div class="navi-text">
-                                                                <div class="font-weight-bold">New customer is registered</div>
-                                                                <div class="text-muted">3 days ago</div>
-                                                            </div>
-                                                        </div>
-                                                    </a>
-                                                    <!--end::Item-->
                                                     <div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps__rail-y" style="top: 0px; right: 0px;"><div class="ps__thumb-y" tabindex="0" style="top: 0px; height: 0px;"></div></div>
                                                 </div>
                                                 <!--end::Nav-->
